--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sm-echarts",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "A smart echarts library for React.",
   "files": [
     "es",
@@ -25,7 +25,6 @@
     "component"
   ],
   "dependencies": {
-    "classnames": "^2.3.1",
     "echarts": "^5.1.2",
     "lodash": "~3.10.1"
   },
@@ -55,9 +54,9 @@
     "typescript": "^4.3.2"
   },
   "peerDependencies": {
+    "echarts": "^4.0.4",
     "react": "^0.14.10",
-    "react-dom": "^0.14.10",
-    "echarts": "^4.0.4"
+    "react-dom": "^0.14.10"
   },
   "license": "MIT",
   "author": {
